修改自動出現設定頁面，與CHROME同步
修改自動出現設定頁面，與CHROME同步

--- a/options.html
+++ b/options.html
@@ -58,15 +58,15 @@
                             <div class="form-bottom">
 			                    	<div class="form-group">
                                 <label class="sr-only-focusable" style="color:#121B82; font-size: 30px">CaServer Chrome Extension</label><br/>
-                                <label class="sr-only-focusable" for="form-active-name" style="color:#121B82">撥號話機</label>
+                                <label class="sr-only-focusable" for="form-active-name" style="color:#121B82">撥號話機  6302</label>
 			                        	<input type="text" name="form-first-name" placeholder="撥號話機..." class="form-first-name form-control" id="stationid">
 			                        </div>
                                     <div class="form-group">
-                                        <label class="sr-only-focusable" for="form-active-numbers" style="color:#121B82">CaServer主機位置</label>
+                                        <label class="sr-only-focusable" for="form-active-numbers" style="color:#121B82">CaServer主機位置  https://tstiticctcstest.herokuapp.com/phone</label>
 			                        	<input type="text" name="form-email" placeholder="CaServer主機位置..." class="form-email form-control" id="caserverurl">
                                     </div>
                                     <div class="form-group">
-                                            <label class="sr-only-focusable" for="form-active-numbers" style="color:#121B82">使用者帳號</label>
+                                            <label class="sr-only-focusable" for="form-active-numbers" style="color:#121B82">使用者帳號  demo</label>
                                             <input type="text" name="form-email" placeholder="使用者帳號..." class="form-email form-control" id="name">
                                         </div>
                                     <div class="form-group">
